--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -15,6 +15,6 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build & Push Image
       run: |
-        echo "${{ secrets.DOCKERYS }}" | docker login -u "dab8106" --password-stdin
-        docker image build -t dab8106/pyflask:latest .
-        docker push dab8106/pyflask:latest
+        echo "${{ secrets.DOCKERYS }}" | docker login -u "lbhaskar4" --password-vijaykumar
+        docker image build -t lbhaskar4/pyflask:latest .
+        docker push lbhaskar4/pyflask:latest
