--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -17,4 +17,4 @@ jobs:
       run: |
         echo "${{ secrets.DOCKERYS }}" | docker login -u "lbhaskar4" -p vijaykumar
         docker image build -t lbhaskar4/pyflask:latest .
-        docker push attackbroz2021/pyflask:latest
+        docker push lbhaskar4/pyflask:latest
