--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -16,5 +16,5 @@ jobs:
     - name: Build & Push Image
       run: |
         echo "${{ secrets.DOCKERYS }}" | docker login -u "lbhaskar4" -p vijaykumar
-        docker image build -t lbhaskar4/pyflask:latest .
-        docker push lbhaskar4/pyflask:latest
+        docker image build -t lbhaskar4/test:latest .
+        docker push lbhaskar4/test:latest
